--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -47,6 +47,6 @@ html(class='page  no-js', lang='ru')
           p Подвал
 
     block templates
-    block page-bottom
-      script(src='js/vendors.min.js')
-      script(src='js/script.min.js')
+    //- block page-bottom
+    //-   script(src='js/vendors.min.js')
+    //-   script(src='js/script.min.js')
