--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,9 +4,12 @@ $warning-color:       #fdc05d;
 $white-color:         #ffffff;
 
 $gray-light:          #eaeaea;
+$gray-medium:           #494949;
 $gray-dark:           #282828;
 
 $text-color:          $gray-dark;
+
+$transparent-color:   rgba(255, 255, 255, 0);
 
 $font-family:         'Roboto', 'Arial', 'Helvetica Neue', sans-serif;
 $ff-roboto:           $font-family;
