--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -10,6 +10,17 @@
 }
 
 @font-face {
+  font-family: Roboto;
+  src:
+    url('../fonts/roboto-black.woff2') format('woff2'),
+    url('../fonts/roboto-black.woff') format('woff'),
+    url('../fonts/roboto-black.ttf') format('ttf');
+  font-weight: 900;
+  font-style: normal;
+  font-display: block;
+}
+
+@font-face {
   font-family: Montserrat;
   src:
     url('../fonts/Montserrat-Regular.woff') format('woff'),
@@ -25,6 +36,16 @@
     url('../fonts/Montserrat-Bold.woff') format('woff'),
     url('../fonts/Montserrat-Bold.ttf') format('ttf');
   font-weight: 600;
+  font-style: normal;
+  font-display: block;
+}
+
+@font-face {
+  font-family: Montserrat;
+  src:
+    url('../fonts/Montserrat-Black.woff') format('woff'),
+    url('../fonts/Montserrat-Black.ttf') format('ttf');
+  font-weight: 900;
   font-style: normal;
   font-display: block;
 }
