--- a/src/scss/blocks/footer.scss
+++ b/src/scss/blocks/footer.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   width: 100vw;
   min-height: 106px;
-  background: url("../img/footer-bg.png") no-repeat center / cover;
+  background: url('../img/footer-bg.png') no-repeat center / cover;
 
   &__copyright {
     max-width: $screen-lg;
