--- a/src/scss/blocks/page.scss
+++ b/src/scss/blocks/page.scss
@@ -5,9 +5,6 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-
-    &::selection {
-    }
   }
 
   body {
@@ -27,5 +24,7 @@
     flex: 1;
   }
 
-  &__footer-wrapper {}
+  &__footer-wrapper {
+    display: flex;
+  }
 }
