--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -7,7 +7,7 @@ block meta
 block header
   header.header
     a.header__logo-link(href="/")
-      img.header__logo-img(src="/img/logo.png", alt="Pizza Logo")
+      img.header__logo-img(src="img/logo.png", alt="Pizza Logo")
     nav.main-nav
       ul.main-nav__list
         li.main-nav__item
@@ -26,7 +26,7 @@ block content
         h2.banner__title Create Your Own Pizza
         p.banner__text Lorem Ipsum is simply dummy text of&nbsp;the&nbsp;printing and&nbsp;typesetting industry. Lorem Ipsum has been the&nbsp;industry's standard dummy since the&nbsp;1500s.
         a.banner__read-more-btn(href="#") Read more
-      img.banner__img(src="/img/pizza.png", alt="Create Your Own Pizza")
+      img.banner__img(src="img/pizza.png", alt="Create Your Own Pizza")
 
     section.progress
       h2.progress__title HOW TO PROGRESS?
