--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -23,7 +23,7 @@
   }
 
   &__logo-link {
-    text-transform: none;
+    text-decoration: none;
 
     &::selection {
       background-color: $transparent-color;
