--- a/css/style.css
+++ b/css/style.css
@@ -290,7 +290,7 @@
   background-color: #ffffff;
 }
 .header__logo-link {
-  text-transform: none;
+  text-decoration: none;
 }
 .header__logo-link::-moz-selection {
   background-color: rgba(255, 255, 255, 0);
@@ -362,6 +362,7 @@
   text-decoration: none;
   -webkit-transition: color 0.25s ease-in;
   transition: color 0.25s ease-in;
+  color: #494949;
 }
 .main-nav__link::-moz-selection {
   background-color: rgba(255, 255, 255, 0);
